--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_DEV_SERVER_URL=http://localhost:5173
+
+DOCKER_USER_ID=1000
+DOCKER_GROUP_ID=1000
